# tuya

./: .gitignore  readme.md
arm_app/: CHANGELOG.md  CMakeLists.txt  README.md  build_app.sh
arm_app/apps/include/: timed_task.hpp  tuya.h  tuya_dp_function.h  tuya_enums.h  tuya_ipc_common_demo.h  tuya_ipc_media_demo.h  tuya_ipc_sweeper_demo.h  tuya_os_adapt_bt.h  tuya_robot.h  tuya_sdk_common.h  tuya_sdk_log_upload_demo.h  tuya_sdk_media_demo.h  tuya_utils.h
arm_app/apps/include/message/: baofei_messages.h  core_messages.h  tuya_messages.h
arm_app/apps/src/: clean_param.h  timed_task.cpp  tkl_bluetooth.c  tkl_flash.c  tkl_pm.c  tkl_rtc.c  tkl_video_enc.c  tkl_wifi.c  tuya.cpp  tuya.key  tuya_dp_function.cpp  tuya_enums.cpp  tuya_ipc_media_demo.c  tuya_ipc_sweeper_demo.c  tuya_ops.cpp  tuya_os_adapt_bt.c  tuya_robot.cpp  tuya_sdk_av_demo.c  tuya_sdk_dp_demo.c  tuya_sdk_media_demo.c  tuya_sdk_net_sync_demo.c  tuya_sdk_rt_map_demo.c  tuya_sdk_sd_card_demo.c  tuya_sdk_simple_start.c  tuya_sdk_storage_demo.c  tuya_sdk_storage_demo.h  tuya_sdk_upgrade_demo.c  tuya_sdk_voice_demo.c  tuya_utils.cpp  tuya_wifi.c
arm_app/apps/src/oal/: time_tick.h  timer.h
arm_app/apps/src/rkcamera/: CMakeLists.txt  encoder.cpp  encoder.h  rkcamera.cpp  rkcamera.h
arm_app/apps/src/rkcamera/mpp/: version.h
arm_app/apps/src/rksound/: CMakeLists.txt  rksound.cpp  rksound.h
arm_app/apps/src/utils/: hash.hpp  protocol_hex.h  shell.hpp  stacktrace.hpp
arm_app/apps/src/wifi/include/wifi/: api_action.h  linkd.h  linux_hapd.h  linux_nl.h  linux_wpa.h  os_net_queue.h  os_net_sync_notify.h  os_net_utils.h  wifi.h  wifimg.h  wmg_ap.h  wmg_common.h  wmg_monitor.h  wmg_sta.h
arm_app/apps/src/wifi/wifi/: api_action.c  event.c  linkd.c  linux_common.c  linux_hapd.c  linux_nl.c  linux_wpa.c  mutex.c  queue.c  ring_buff.c  scan.c  sem.c  sync_notify.c  thread.c  udhcpc.c  utils.c  wifi.cc  wifimg.c  wmg_ap.c  wmg_common.c  wmg_monitor.c  wmg_sta.c
arm_app/build_rk3326/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
arm_app/build_rk3326/apps/src/bluez/libbluetooth/: Makefile  cmake_install.cmake
arm_app/build_rk3326/apps/src/bluez/libshared/: Makefile  cmake_install.cmake
arm_app/lib/: libbluetooth.so.3  libcrypto.so.1.0.0  libdbus-1.so.3.19.4  librtmp.so.1  libssl.so.1.0.0
arm_app/nl/lib/: libnl-3.la  libnl-cli-3.la  libnl-genl-3.la  libnl-idiag-3.la  libnl-nf-3.la  libnl-route-3.la
arm_app/nl/lib/libnl/cli/cls/: basic.la  cgroup.la
arm_app/nl/lib/libnl/cli/qdisc/: bfifo.la  blackhole.la  fq_codel.la  htb.la  ingress.la  pfifo.la  plug.la
arm_app/nl/lib/pkgconfig/: libnl-3.0.pc  libnl-cli-3.0.pc  libnl-genl-3.0.pc  libnl-nf-3.0.pc  libnl-route-3.0.pc
arm_app/nl/sbin/: genl-ctrl-list  nl-class-add  nl-class-delete  nl-class-list  nl-classid-lookup  nl-cls-add  nl-cls-delete  nl-cls-list  nl-link-list  nl-pktloc-lookup  nl-qdisc-add  nl-qdisc-delete  nl-qdisc-list
arm_app/sdk/: Makefile  README.md
arm_app/sdk/apps/tuyaos_demo_robot/: link.mk
arm_app/sdk/apps/tuyaos_demo_robot/application_components/: local.mk
arm_app/sdk/apps/tuyaos_demo_robot/application_components/include/: tuya_sdk_floor_map_demo.h  tuya_sdk_net_sync_demo.h  tuya_sdk_rt_map_demo.h
arm_app/sdk/include/: base_event.h  com_protocol.h  http_inf.h  mf_test.h  smart_frame.h  sweeper_httpc.h  tuya_error_code.h  tuya_iot_config.h  tuya_iot_internal_api.h  tuya_iot_wifi_api.h  tuya_ipc_dp.h  tuya_ipc_low_power_com_def.h  tuya_ipc_media.h  tuya_ipc_notify.h  tuya_ipc_p2p.h  tuya_ipc_sdk_info.h  tuya_ipc_skill.h  tuya_ipc_stream_storage.h  tuya_os_adapter.h  tuya_tls_config_ecc_only.h  tuya_tls_config_no_strip.h
arm_app/sdk/include/base/include/: tuya_iot_config.h
arm_app/sdk/include/components/mid_rtp/include/: rtp.h
arm_app/sdk/scripts/: kernel_porting.sh  kernel_porting_bsp.sh  kernel_porting_null.sh
arm_app/sdk/scripts/error_code/: module-en.json
arm_app/sdk/scripts/error_code/release/: tuya_error_code.md
arm_app/sdk/scripts/mk/: app.mk  config.mk  env.mk  os.mk  xmake_static.mk
arm_app/sdk/scripts/porting/: kernel_porting.py  porting_new_file.py  porting_old_file.py
arm_app/sdk/scripts/porting/template/: Makefile
arm_app/sdk/tuyaos/: IoTOSconfig  Makefile  ReleaseNote.txt  platform.mk  tuyaos_kernel.config
arm_app/sdk/tuyaos/scripts/: set_iotosconfig.py
arm_app/sdk/tuyaos/tuyaos_adapter/src/: tkl_adc.c  tkl_asymmetrical.c  tkl_audio.c  tkl_bluetooth.c  tkl_dac.c  tkl_display.c  tkl_fs.c  tkl_gpio.c  tkl_i2c.c  tkl_i2s.c  tkl_isp.c  tkl_media.c  tkl_memory.c  tkl_output.c  tkl_pwm.c  tkl_register.c  tkl_spi.c  tkl_storage.c  tkl_system.c  tkl_thread.c  tkl_timer.c  tkl_uart.c  tkl_video_in.c  tkl_wifi.c  tkl_wired.c
arm_app/sdk_bt/include/: gw_intf.h  sweeper_adapter.h  tuya_cloud_wifi_defs.h  tuya_iot_config.h  tuya_ring_buffer.h  tuya_tls_config_psk_only.h  tuya_uf_db.h  tuya_ws_db.h  upload_notification.h
arm_app/sdk_tuyaos/apps/tuyaos_demo_robot/: README.md  local.mk
arm_app/sdk_tuyaos/scripts/: Makefile  get_cube_api.py  get_sub_dir.sh  prepare_make_yaml.py  prepare_make_yaml_locater.py  prepare_param.sh  schema_json_to_string.py  set_app_config.py  set_iotosconfig.py  tools_update.sh  tuya_iot_config-h-tail
arm_app/sdk_tuyaos/scripts/error_code/: log-seq-en.json  log-seq.json  module.json
arm_app/sdk_tuyaos/scripts/mk/: cube_api.mk  none_permissions.mk  xmake.mk
arm_app/sdk_tuyaos/scripts/porting/template/: local.mk.template
arm_app/sdk_wifi/include/: gpio_test.h  ipc_httpc.h  tuya_cloud_com_defs.h  tuya_cnt_rst.h  tuya_error_code.h  tuya_iot_config.h  tuya_iot_sweeper_api.h  tuya_ipc_album.h  tuya_media_service_rtc.h  upload_notification_sweeper.h
arm_app/sdk_wifi_bt/include/: cloud_operation.h  encrypt_pic.h  ffc_app.h  prod_test.h  tuya_bt.h  tuya_cloud_base_defs.h  tuya_cloud_com_defs.h  tuya_iot_com_api.h  tuya_ipc_p2p_common.h  tuya_ipc_sdk_init.h  uni_log.h
arm_app/sdkv5/include/: app_agent.h  base_event_info.h  mqtt_client.h  sdk_version.h  tuya_hal_wifi.h  tuya_ipc_cloud_storage.h  tuya_tls_config_ecc_only_nxp_se050.h  upload_notification.h
(+182 files in other folders)
